2013-10-17  Andreas Kling  <akling@apple.com>

        Make it possible to assign a PassRef to a RefPtr.
        <https://webkit.org/b/122943>

        Added a small API test for RefPtr=(PassRef) so we know this code
        will compile (and work.)

        Reviewed by Antti Koivisto.

2013-10-16  Filip Pizlo  <fpizlo@apple.com>

        We need test coverage for just the Baseline JIT
        https://bugs.webkit.org/show_bug.cgi?id=122929

        Reviewed by Sam Weinig.
        
        Adds no-LLInt versions of all tests. For the Mozilla tests, also add a BaselineJIT-only
        variant.

        * Scripts/run-jsc-stress-tests:

2013-10-16  Ryosuke Niwa  <rniwa@webkit.org>

        Support multiple repositories in submitting results to --results-server-host
        https://bugs.webkit.org/show_bug.cgi?id=122935

        Reviewed by Anders Carlsson.

        Remoevd --got-revision and added the logic to extract revision information
        from multiple repositories as done in run-perf-tests.

        * Scripts/webkitpy/layout_tests/controllers/manager.py:
        (Manager.upload_results):
        * Scripts/webkitpy/layout_tests/run_webkit_tests.py:
        (parse_args):

2013-10-16  Darin Adler  <darin@apple.com>

        Add PassRef and createRefCounted so we can improve creation of RefCounted objects
        https://bugs.webkit.org/show_bug.cgi?id=122904

        Reviewed by Anders Carlsson.

        * TestWebKitAPI/Tests/WTF/Ref.cpp: Added some basic tests for adoptRef and PassRef.

2013-10-16  Darin Adler  <darin@apple.com>

        Need tests for RefPtr self-assignment and self-move-assignment.

        * TestWebKitAPI/Tests/WTF/RefPtr.cpp: Added tests.

2013-10-16  Robert Plociennik  <r.plociennik@samsung.com>

        [EFL] Minibrowser can't load child window's location
        https://bugs.webkit.org/show_bug.cgi?id=122485

        Reviewed by Gyuyoung Kim.

        * MiniBrowser/efl/main.c: Now calling window_create() without the url parameter